--- a/index.html
+++ b/index.html
@@ -7,24 +7,32 @@
     <title>ColorConverter</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
-    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
-    <div id="app">
-        {{text}}
-    </div>
-    <script>
-        const app = {
-            data() {
-                return {
-                    text: 0,
-                }
-            }
-        }
-
-        Vue.createApp(app).mount('#app')
-    </script>
+    <header>
+        <div class="wrapper">
+            <h1>Color Converter</h1>
+        </div>
+    </header>
+    <main>
+        <div class="wrapper">
+            <div class="left_input">
+                <label>
+                    <p>Hex String</p>
+                    <input type="text">
+                </label>
+                <label>
+                    <p>RGB</p>
+                    <input type="text">
+                </label>
+            </div>
+            <div class="right_input" data-input="#FFFFFF">
+                <input class="color_picker" type="color">
+            </div>
+        </div>
+    </main>
+    <footer></footer>
     <script src="./js/index.js"></script>
 </body>
 
