--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div class="left_input">
                 <label class="hex">
                     <p>Hex String</p>
-                    <input  id="hex" type="text" value="#41382F">
+                    <input id="hex" type="text" value="#41382F">
                 </label>
                 <label class="rgb">
                     <p>RGB</p>
-                    <input  id="rgb" type="text" value="65, 56, 47">
+                    <input id="rgb" type="text" value="65, 56, 47">
                 </label>
             </div>
             <div class="right_input">
@@ -35,6 +35,7 @@
     </main>
     <footer></footer>
     <script src="./js/index.js"></script>
+    <script src="./js/copied.js"></script>
 </body>
 
 </html>
